--- a/TrafficHours/Views/Home/Index.cshtml
+++ b/TrafficHours/Views/Home/Index.cshtml
@@ -1,1 +1,20 @@
-﻿<h1>Hello</h1>
+﻿@model EmployeesTrafficHours.Models.FileInputModel
+
+
+<h2>Please choose input file and submit</h2>
+
+<div style="background-color:palevioletred;">
+    <h3>
+        @TempData["Error"]
+    </h3>
+</div>
+
+<form asp-action="Calculate" asp-controller="Home" method="post" enctype="multipart/form-data">
+    <input asp-for="file" />
+    <button type="submit">submit</button>
+</form>
+
+
+
+
+
