--- a/TrafficHours/Views/Home/Calculate.cshtml
+++ b/TrafficHours/Views/Home/Calculate.cshtml
@@ -1,1 +1,90 @@
-﻿
+﻿@using EmployeesTrafficHours.Extensions;
+@using EmployeesTrafficHours.Models.Common;
+@using Utilities;
+@model EmployeesTrafficHours.Models.FileModel
+
+
+
+
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Calculate</title>
+</head>
+<body>
+
+
+    <a class="btn btn-primary btn-lg" href="@Url.Action("Download","Home" , new {fileName=Model.FileName })">Download CSV</a>
+
+    <table class="table table-bordered" dir="rtl">
+        <thead>
+            <tr>
+                <th scope="col">ردیف</th>
+                <th scope="col">تاریخ</th>
+                <th scope="col">روز</th>
+                <th scope="col">نام فرد</th>
+                <th scope="col">نوع</th>
+                <th scope="col">کارکرد</th>
+                <th scope="col">اولین ورود</th>
+                <th scope="col">آخرین خروج</th>
+                <th scope="col">رکورد ها</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                int i = 1;
+            }
+
+            @foreach (var record in Model.EmployeeTrafficHours.OrderBy(x => x.Date))
+            {
+                <tr>
+                    <th scope="row">@i</th>
+                    <td>@ShamsiDate.ConvertDateToShamsi(record.Date)</td>
+                    <td>@record.Day.GetEnumDescription()</td>
+                    <td>@record.Name</td>
+                    <td>@record.Status.GetEnumDescription()</td>
+                    <td>@record.EffortTime</td>
+                    <td>@(record.Status != Status.Error ? record.DateTimes.FirstOrDefault().TimeOfDay : "-")</td>
+                    <td>@(record.Status != Status.Error ? record.DateTimes.LastOrDefault().TimeOfDay : "-")</td>
+                    <td>
+                        @if (record.DateTimes.Count == 2)
+                        {
+                            @("-")
+                        }
+                        else
+                        {
+                            foreach (var time in record.DateTimes)
+                            {
+                                if (record.Status == Status.Error || time.TimeOfDay != record.DateTimes.FirstOrDefault().TimeOfDay && time.TimeOfDay != record.DateTimes.LastOrDefault().TimeOfDay)
+                                {
+                                    @time.TimeOfDay
+                                    <br />
+                                }
+                            }
+                        }
+
+                    </td>
+
+
+                </tr>
+                i++;
+            }
+
+        </tbody>
+    </table>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
+</html>
+
